--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
 	<div class="charcho">
-		<img class="logo" src="logo/logo.png">
+		<img class="logo" src="logo/logo.jpg">
 		<div class="text">
 		<div class="text1"> Giviko Tatunashvili</div> 
 		<div class="text1"> Digital Marketing Manager</div> 
